--- a/templates/main.html
+++ b/templates/main.html
@@ -25,9 +25,7 @@
       {% block content %}{% endblock %}
     </div>
     <div data-role="footer" class="footer">
-      <a href="{{page.rot}}/admin/" data-icon="gear" class="ui-btn-left">{{ page.glob.langa.admin_short }}</a>
-
-      <p><a href="https://github.com/rvolz/BicBucStriim">BicBucStriim {{page.version}}</a>  &copy; 2012 Rainer Volz</p>
+      {% include "footer.html" %}
     </div>      
   </div> <!-- page -->
 
