--- a/templates/authors.html
+++ b/templates/authors.html
@@ -2,6 +2,12 @@
 
 
 {% block content %}
+<div data-role="fieldcontain" class="ui-hide-label">
+	<form action="{{page.rot}}/authorslist/0/" method="get">
+		<label for="search">Autorensuche:</label>
+		<input type="search" name="search" id="search" value="{{search}}" data-mini="true" placeholder="Suche nach Autoren"/>
+	</form>
+</div>
 <ul data-role="listview" data-filter="false">	
 	{% for author in authors %}
 		{% if author.initial != "" %}
