--- a/templates/titles.html
+++ b/templates/titles.html
@@ -1,6 +1,12 @@
 {% extends 'main.html' %}
 
 {% block content %}
+<div data-role="fieldcontain" class="ui-hide-label">
+	<form action="{{page.rot}}/titleslist/0/" method="get">
+		<label for="search">Titelsuche:</label>
+		<input type="search" name="search" id="search" value="{{search}}" data-mini="true" placeholder="Suche nach Titeln"/>
+	</form>
+</div>
 <ul data-role="listview" data-filter="false">	
 	{% for book in books %}
 		{% if book.initial != "" %}
