--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,16 +2,23 @@
 	{% if curpage > 0 %}
 		<a  data-icon="arrow-l" data-role="button" class="ui-btn-left" 
 				href="{{page.rot}}/{{url}}/{{curpage - 1}}/{% if search != NULL %}?search={{search}}{% endif %}">
-			prev
+			{{page.glob.langa.pagination_prev}}
 		</a>	
 	{% endif %}
 	{% if curpage+1 < pages %}
 		<a data-icon="arrow-r" data-role="button" class="ui-btn-right" 
 			 href="{{page.rot}}/{{url}}/{{curpage + 1}}/{% if search != NULL %}?search={{search}}{% endif %}">
-			next
+			{{page.glob.langa.pagination_next}}
 		</a>	
 	{% endif %}
-	<h1>Seite {{ curpage+1 }}/{{ pages }}</h1>
+	<h1>
+		{% if search != NULL %}
+			{{page.glob.langa.pagination_search}} 
+		{% else %}
+			{{page.glob.langa.pagination_page}} 
+		{% endif %}
+		{{ curpage+1 }}/{{ pages }}
+		</h1>
 {% else %}
 	<a href="{{page.rot}}/admin/" data-icon="gear" class="ui-btn-left">{{ page.glob.langa.admin_short }}</a>
 	<h1>{{ page.title }}</h1>
