--- a/templates/tags.html
+++ b/templates/tags.html
@@ -3,8 +3,9 @@
 {% block content %}
 <div data-role="fieldcontain" class="ui-hide-label">
 	<form action="{{page.rot}}/tagslist/0/" method="get">
-		<label for="search">Autorensuche:</label>
-		<input type="search" name="search" id="search" value="{{search}}" data-mini="true" placeholder="Suche nach Stichworten"/>
+		<label for="search">{{page.glob.langa.pagination_search_lbl_tag}}</label>
+		<input type="search" name="search" id="search" value="{{search}}" data-mini="true" 
+				placeholder="{{page.glob.langa.pagination_search_ph_tag}}"/>
 	</form>
 </div>
 <ul data-role="listview" data-filter="false">	
