--- a/templates/titles.html
+++ b/templates/titles.html
@@ -3,8 +3,9 @@
 {% block content %}
 <div data-role="fieldcontain" class="ui-hide-label">
 	<form action="{{page.rot}}/titleslist/0/" method="get">
-		<label for="search">Titelsuche:</label>
-		<input type="search" name="search" id="search" value="{{search}}" data-mini="true" placeholder="Suche nach Titeln"/>
+		<label for="search">{{page.glob.langa.pagination_search_lbl_title}}</label>
+		<input type="search" name="search" id="search" value="{{search}}" data-mini="true" 
+				placeholder="{{page.glob.langa.pagination_search_ph_title}}"/>
 	</form>
 </div>
 <ul data-role="listview" data-filter="false">	
