--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -50,4 +50,14 @@
 	  </li>       
 	</ul>
 </div>
+{% if page.menu > 1 %}
+<form action="{{page.rot}}/{{url}}/0/" 
+			method="get" class="ui-bar-b">
+	<div data-role="fieldcontain" class="ui-hide-label">
+		<label for="search">{{page.glob.langa.pagination_search_lbl}}</label>
+		<input type="search" name="search" id="search" value="{{search}}" 
+					placeholder="{{page.glob.langa.pagination_search_ph}}"/>
+	</div>			
+</form>
+{% endif %}
 
