--- a/templates/admin.html
+++ b/templates/admin.html
@@ -50,7 +50,19 @@
 					disabled
 			{% endif %}
 			/>
-		</fieldset>
-		<button type="submit">{{page.glob.langa.save}}</button>	
+	</fieldset>
+	<fieldset data-role="fieldcontain">
+		<label for="thumb_gen_clipped">{{page.glob.langa.thumb_gen_clipped}}</label>
+		<select name="thumb_gen_clipped" id="thumb_gen_clipped" data-role="slider">
+			<option value="0" {% if page.glob.thumb_gen_clipped == "0" %}selected {%endif%}>
+				{{page.glob.langa.switch_no}}
+			</option>
+			<option value="1" {% if page.glob.thumb_gen_clipped == "1" %}selected {%endif%}>
+				{{page.glob.langa.switch_yes}}
+			</option>
+		</select>
+		<p>{{page.glob.langa.thumb_gen_clipped_expl}}</p>						
+	</fieldset>	
+	<button type="submit">{{page.glob.langa.save}}</button>	
 </form>
 {% endblock %}
