--- a/templates/tag_detail.html
+++ b/templates/tag_detail.html
@@ -11,7 +11,8 @@
 		<li>
 			<a href="{{page.rot}}/titles/{{book.id}}">
 				<img src="{{page.rot}}/titles/{{ book.id }}/thumbnail" />
-				{{ book.title }}
+				<h3>{{ book.sort }} ({{ book.pubdate|date("Y") }})</h3>
+  			<p>{{book.author_sort}}</p>
 			</a>
 		</li>
 		{% endfor %}	
