Added book series

--- a/templates/series_detail.html
+++ b/templates/series_detail.html
@@ -2,9 +2,9 @@
 
 
 {% block content %}
-<section class="tag_detail row">
+<section class="series_detail row">
 	<header>
-		<h1>{{page.glob.langa.booksbytag}} "{{ tag.name }}":</h1>
+		<h1>{{page.glob.langa.booksbyseries}} "{{ series.name }}":</h1>
 	</header>
 	<ul data-role="listview">
 		{% for book in books %}
