--- a/templates/title_detail.html
+++ b/templates/title_detail.html
@@ -53,6 +53,14 @@
 				<a data-role="button" data-icon="info" href="{{page.rot}}/authors/{{author.id}}">{{ author.name }}</a>
 				{% endfor %} 
 		</div>
+		{% if series != NULL %}
+		<div id="series" data-role="collapsible" data-collapsed="false">
+				<h2>{{page.glob.langa.series}}</h2>
+				{% for this_series in series %}
+				<a data-role="button" data-icon="info" href="{{page.rot}}/series/{{this_series.id}}">{{ this_series.name }}</a>
+				{% endfor %} 
+		</div>		
+		{% endif %}
 		<div id="tags" data-role="collapsible">
 			<h2>{{page.glob.langa.tags}}</h2>			
 			<p>
