Integrated series into main navigaton

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -48,6 +48,11 @@
 	  		{{page.glob.langa.tags}}
 	  	</a>
 	  </li>       
+	  <li>
+	  	<a href="{{page.rot}}/serieslist/0/" {% if page.menu == 5 %}class="ui-btn-active"{%endif%}>
+	  		{{page.glob.langa.series}}
+	  	</a>
+	  </li>       	  
 	</ul>
 </div>
 {% if page.menu > 1 %}
