--- a/templates/main.html
+++ b/templates/main.html
@@ -8,7 +8,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>{{ page.title }}</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="{{page.rot}}/style/jquery/jquery.mobile-1.1.0.min.css">
+  <link rel="stylesheet" href="{{page.rot}}/style/jquery/jquery.mobile-1.2.0-alpha.1.min.css">
   <link rel="stylesheet" href="{{page.rot}}/style/style.css">
 	<script src="{{page.rot}}/js/libs/modernizr-2.5-respond-1.1.0.min.js"></script>
 </head>
@@ -29,8 +29,8 @@
     </div>      
   </div> <!-- page -->
 
-  <script src="{{page.rot}}/js/libs/jquery-1.7.1.min.js"></script>
-  <script src="{{page.rot}}/js/libs/jquery.mobile-1.1.0.min.js"></script>
+  <script src="{{page.rot}}/js/libs/jquery-1.7.2.min.js"></script>
+  <script src="{{page.rot}}/js/libs/jquery.mobile-1.2.0-alpha.1.min.js"></script>
   <script src="{{page.rot}}/js/libs/jquery.cookie.js"></script>
   <script src="{{page.rot}}/js/script.js"></script>
 </body>
