Changed submit-button in download password dialog for jQM 1.2.0

--- a/templates/password_dialog.html
+++ b/templates/password_dialog.html
@@ -6,8 +6,12 @@
 			<label for="password">Passwort</label>
 			<input type="password" id="password" name="password" value="" autofocus />		
 			<p id="pw_dlg_status">{{page.glob.langa.invalid_password}}</p>
-			<a data-role="button" data-rel="back" data-icon="delete" data-inline="true">{{page.glob.langa.back}}</</a>
-			<button class="checkdl" data-ajax="true" data-bookid="{{bookid}}" data-proot="{{page.rot}}" data-role="button"  data-icon="check" data-inline="true">{{page.glob.langa.check_access}}</a>
+			<a data-role="button" data-rel="back" data-icon="delete" data-inline="true">
+				{{page.glob.langa.back}}
+			</a>
+			<a class="checkdl" data-role="button" data-ajax="true" data-bookid="{{bookid}}" 	data-proot="{{page.rot}}"  data-icon="check" data-inline="true">
+				{{page.glob.langa.check_access}}
+			</a>
 		</fieldset>
 	</div>
 {% endblock %}
