--- a/templates/authors.html
+++ b/templates/authors.html
@@ -1,5 +1,11 @@
 {% extends 'main.html' %}
 
+{% block headerlinks %}
+  <link rel="related" href="{{page.rot}}/opds/" 
+  	type="application/atom+xml;profile=opds-catalog" title="OPDS index">
+  <link rel="alternate" href="{{page.rot}}/opds/authorlist/" 
+  	type="application/atom+xml;profile=opds-catalog" title="OPDS catalog: by authors">
+{% endblock %}
 
 {% block content %}
 <ul data-role="listview" data-filter="false">	
