--- a/templates/tags.html
+++ b/templates/tags.html
@@ -1,5 +1,12 @@
 {% extends 'main.html' %}
 
+{% block headerlinks %}
+<link rel="related" href="{{page.rot}}/opds/" 
+	type="application/atom+xml;profile=opds-catalog" title="OPDS index">
+<link rel="alternate" href="{{page.rot}}/opds/tagslist/" 
+	type="application/atom+xml;profile=opds-catalog" title="OPDS catalog: by tags">
+{% endblock %}
+
 {% block content %}
 <ul data-role="listview" data-filter="false">	
 	{% for tag in tags %}
