--- a/templates/authors.html
+++ b/templates/authors.html
@@ -14,7 +14,7 @@
 			<li data-role="list-divider"> {{ author.initial }}</li>
 		{% else %}
 			<li>
-				<a href="{{page.rot}}/authors/{{ author.id }}">{{ author.sort }}
+				<a href="{{page.rot}}/authors/{{ author.id }}/0/">{{ author.sort }}
 					<span class="ui-li-count">{{author.anzahl}}</span>
 				</a>
 			</li>
