--- a/templates/series.html
+++ b/templates/series.html
@@ -14,7 +14,7 @@
 			<li data-role="list-divider"> {{ this_series.initial }}</li>
 		{% else %}
 			<li>
-				<a href="{{page.rot}}/series/{{ this_series.id }}">{{ this_series.name }}
+				<a href="{{page.rot}}/series/{{ this_series.id }}/0/">{{ this_series.name }}
 				<span class="ui-li-count">{{ this_series.anzahl }}</span></a>
 			</li>
 		{% endif %}
