--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -19,6 +19,7 @@
 		{% endif %}
 		{{ curpage+1 }}/{{ pages }}
 		</h1>
+		<h1>{{ page.title }}</h1>
 {% else %}
 	<a href="{{page.rot}}/admin/" data-icon="gear" class="ui-btn-left">{{ page.glob.langa.admin_short }}</a>
 	<h1>{{ page.title }}</h1>
