--- a/templates/tags.html
+++ b/templates/tags.html
@@ -14,7 +14,7 @@
 			<li data-role="list-divider"> {{ tag.initial }}</li>
 		{% else %}
 			<li>
-				<a href="{{page.rot}}/tags/{{ tag.id }}">{{ tag.name }}
+				<a href="{{page.rot}}/tags/{{ tag.id }}/0/">{{ tag.name }}
 				<span class="ui-li-count">{{ tag.anzahl }}</span></a>
 			</li>
 		{% endif %}
