--- a/templates/title_detail.html
+++ b/templates/title_detail.html
@@ -50,14 +50,14 @@
 		<div id="authors" data-role="collapsible" data-collapsed="false">
 				<h2>{{page.glob.langa.authors}}</h2>
 				{% for author in authors %}
-				<a data-role="button" data-icon="info" href="{{page.rot}}/authors/{{author.id}}">{{ author.name }}</a>
+				<a data-role="button" data-icon="info" href="{{page.rot}}/authors/{{author.id}}/0/">{{ author.name }}</a>
 				{% endfor %} 
 		</div>
 		{% if series != NULL %}
 		<div id="series" data-role="collapsible" data-collapsed="false">
 				<h2>{{page.glob.langa.series}}</h2>
 				{% for this_series in series %}
-				<a data-role="button" data-icon="info" href="{{page.rot}}/series/{{this_series.id}}">{{ this_series.name }}</a>
+				<a data-role="button" data-icon="info" href="{{page.rot}}/series/{{this_series.id}}/0/">{{ this_series.name }}</a>
 				{% endfor %} 
 		</div>		
 		{% endif %}
@@ -65,7 +65,7 @@
 			<h2>{{page.glob.langa.tags}}</h2>			
 			<p>
 				{% for tag in tags %}
-				<a data-role="button" data-mini="true" data-inline="true" href="{{page.rot}}/tags/{{tag.id}}">{{ tag.name }}</a>
+				<a data-role="button" data-mini="true" data-inline="true" href="{{page.rot}}/tags/{{tag.id}}/0/">{{ tag.name }}</a>
 				{% endfor %}
 			</p>
 		</div>
