Changed updated js/css tags in main HTML template

--- a/templates/main.html
+++ b/templates/main.html
@@ -9,7 +9,7 @@
 	<title>{{ page.title }}</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
   {% block headerlinks %}{% endblock %}
-  <link rel="stylesheet" href="{{page.rot}}/style/jquery/jquery.mobile-1.2.0-alpha.1.min.css">
+  <link rel="stylesheet" href="{{page.rot}}/style/jquery/jquery.mobile-1.2.0.min.css">
   <link rel="stylesheet" href="{{page.rot}}/style/style.css">
 	<script src="{{page.rot}}/js/libs/modernizr-2.5-respond-1.1.0.min.js"></script>
 </head>
@@ -30,8 +30,8 @@
     </div>      
   </div> <!-- page -->
 
-  <script src="{{page.rot}}/js/libs/jquery-1.7.2.min.js"></script>
-  <script src="{{page.rot}}/js/libs/jquery.mobile-1.2.0-alpha.1.min.js"></script>
+  <script src="{{page.rot}}/js/libs/jquery-1.8.3.min.js"></script>
+  <script src="{{page.rot}}/js/libs/jquery.mobile-1.2.0.min.js"></script>
   <script src="{{page.rot}}/js/libs/jquery.cookie.js"></script>
   <script src="{{page.rot}}/js/script.js"></script>
 </body>
