--- a/templates/titles.html
+++ b/templates/titles.html
@@ -13,13 +13,7 @@
 		{% if book.initial != "" %}
 			<li data-role="list-divider"> {{ book.initial }}</li>
 		{% else %}
-			<li>				
-				<a href="{{page.rot}}/titles/{{ book.id }}">
-					<img src="{{page.rot}}/titles/{{ book.id }}/thumbnail/" />
-					<h3>{{ book.sort }} ({{ book.pubdate|date("Y") }})</h3>
-  				<p>{{book.author_sort}}</p>
-				</a>
-			</li>
+			{% include "title_entry.html" %}
 		{% endif %}
   {% endfor %}
 </ul>
