--- a/templates/index_last30.html
+++ b/templates/index_last30.html
@@ -9,13 +9,7 @@
 {% block content %}
 <ul data-role="listview">
 	{% for book in books %}
-  	<li>
-  		<a href="{{ page.rot }}/titles/{{ book.id }}">
-  			<img src="{{page.rot}}/titles/{{ book.id }}/thumbnail" />
-  			<h3>{{ book.title }} ({{ book.pubdate|date("Y") }})</h3>
-  			<p>{{book.author_sort}}</p>
-  		</a> 
-  	</li>
+  	{% include "title_entry.html" %}
   {% endfor %}
 </ul>
 {% endblock %}
