Made app title configurable

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -106,6 +106,14 @@
 		/>
 		<p>{{page.glob.langa.page_size_expl}}</p>
 	</fieldset>	
+	<fieldset data-role="fieldcontain">
+		<label for="display_app_name">{{page.glob.langa.display_app_name}}</label>
+		<input name="display_app_name" id="display_app_name" 
+			type="text" 
+			value="{{page.glob.display_app_name}}"
+		/>
+		<p>{{page.glob.langa.display_app_name_expl}}</p>
+	</fieldset>		
 	<button type="submit">{{page.glob.langa.save}}</button>	
 </form>
 </div>
