--- a/templates/installcheck.html
+++ b/templates/installcheck.html
@@ -10,6 +10,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="style/jquery/jquery.mobile-1.2.0.min.css">
   <link rel="stylesheet" href="style/style.css">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 	<script src="js/libs/modernizr-2.5-respond-1.1.0.min.js"></script>
 </head>
 <body>
