--- a/templates/main.html
+++ b/templates/main.html
@@ -11,6 +11,7 @@
   {% block headerlinks %}{% endblock %}
   <link rel="stylesheet" href="{{page.rot}}/style/jquery/jquery.mobile-1.2.0.min.css">
   <link rel="stylesheet" href="{{page.rot}}/style/style.css">
+  <link rel="icon" href="{{page.rot}}/favicon.ico" type="image/x-icon">
 	<script src="{{page.rot}}/js/libs/modernizr-2.5-respond-1.1.0.min.js"></script>
 </head>
 <body>
